// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > when is clickable > should render with clickable styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  word-break: break-word;
  border: 1px solid var(--cui-border-normal);
  border-radius: 8px;
  padding: calc(4px - 1px) 12px;
  cursor: default;
  background-color: var(--cui-bg-normal);
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  cursor: pointer;
  outline: 0;
  text-align: left;
}

.circuit-1:hover {
  color: var(--cui-fg-normal-hovered);
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
}

.circuit-1:active {
  color: var(--cui-fg-normal-pressed);
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

<div
  class="circuit-0"
>
  <button
    class="circuit-1"
    type="button"
  >
    SomeTest
  </button>
</div>
`;

exports[`Tag > when is default > should render with default styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  word-break: break-word;
  border: 1px solid var(--cui-border-normal);
  border-radius: 8px;
  padding: calc(4px - 1px) 12px;
  cursor: default;
  background-color: var(--cui-bg-normal);
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    SomeTest
  </div>
</div>
`;

exports[`Tag > when is selected > should change the close icon color 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  word-break: break-word;
  border: 1px solid var(--cui-border-normal);
  border-radius: 8px;
  padding: calc(4px - 1px) 12px;
  cursor: default;
  background-color: var(--cui-bg-normal);
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  padding-right: calc(4px + 32px);
  background-color: var(--cui-bg-accent-strong);
  border-color: var(--cui-border-accent);
  color: var(--cui-fg-on-strong);
}

.circuit-2 {
  border-color: transparent!important;
  position: absolute;
  top: 50%;
  right: 1px;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 8px;
  border: 0;
}

.circuit-3 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    SomeTest
  </div>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _primary_892426 _kilo_f6dd9a circuit-2"
    data-testid="tag-close"
    title="Remove"
    type="button"
  >
    <span
      class="_spinner_892426 circuit-3"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Remove
      </span>
    </span>
  </button>
</div>
`;

exports[`Tag > when is selected > should change the given icon color 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  word-break: break-word;
  border: 1px solid var(--cui-border-normal);
  border-radius: 8px;
  padding: calc(4px - 1px) 12px;
  cursor: default;
  background-color: var(--cui-bg-normal);
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: var(--cui-border-accent);
  color: var(--cui-fg-on-strong);
}

.circuit-2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: -4px;
  margin-right: 4px;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
      data-testid="tag-icon"
    />
    SomeTest
  </div>
</div>
`;

exports[`Tag > when is selected > should render with selected styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  word-break: break-word;
  border: 1px solid var(--cui-border-normal);
  border-radius: 8px;
  padding: calc(4px - 1px) 12px;
  cursor: default;
  background-color: var(--cui-bg-normal);
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: var(--cui-border-accent);
  color: var(--cui-fg-on-strong);
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    SomeTest
  </div>
</div>
`;
